# Fim

./: .gitignore  .gitlab-ci.yml  Dockerfile  Doxyfile  Fim  LICENSE  Makefile  README.md  TODO  astylerc  game  makefile  makefile.win  meson.build  target.mk
docs/: Doxyfile  fim_architecture.graphml  fim_architecture_2.graphml
inc/: collision.h  defs.h  init.h  input.h  level.h  main.h  structs.h
src/: collision.c  collision.h  defs.h  gfx.c  gfx.h  init.c  input.c  input.h  level.c  level.h  log.c  log.h  main.c  main.h  map.c  map.h  mem_leak_test.h  meson.build  move.c  move.h  player.c  player.h  solver.c  solver.h  sprites.c  sprites.h  structs.h
subprojects/: sdl2_image.wrap
test/: meson.build  test_level.c  test_main.c  test_map.c  test_move.c  test_one.c  test_solver.c  test_two.c
